# firmware

./: .clang-format  .gitignore  .prettierignore  CMakeLists.txt  CODE_OF_CONDUCT.md  CONTRIBUTING.md  Dockerfile  Dockerfile.twister  Kconfig  LICENSE  README.md  package-lock.json  package.json  register-firmware-bundles.js  renovate.json  sonar-project.properties  west.yml
.github/workflows/: attach_release_assets.yml  build-docker-container.yaml  build.yml  check-main-status-test.yml  check-main-status.yml  compliance.yml  dfu_check.yml  doc-build.yml  doc-publish.yml  doc_remove.yml  docker_publish.yml  docs-build-and-publish-zooomin.yml  docs-build-and-publish.yml  fetch-release-assets.mjs  jest.config.js  night.yml  on-push-zoomin-publish.yml  on_push_publish_docs.yml  on_target.yml  publish-docs-zoomin.yml  publish-firmware-bundles-tests.yml  publish-firmware-bundles.yml  publish-symbol-files-to-memfault.yml  register-firmware-bundles.js  register-firmware-bundles.mjs  sonarcloud.yml  test.yml  toolchain-shell.sh
adr/: 002-clean-gitignore.md
app/: CMakeLists.txt  Kconfig  Kconfig.sysbuild  VERSION  overlay-bluetooth.conf  overlay-dev-sectag.conf  overlay-etb.conf  overlay-memfault.conf  overlay-modemtrace-to-memfault.conf  overlay-modemtrace.conf  prj.conf  sample.yaml  sysbuild.conf
app/boards/: nrf9161dk_nrf9161_ns.conf  nrf9161dk_nrf9161_ns.overlay  thingy91x_nrf9151_ns.conf  thingy91x_nrf9151_ns.overlay
app/child_image/: mcuboot.conf
app/child_image/mcuboot/boards/: thingy91x_nrf9151.conf
app/config/: memfault_platform_config.h  memfault_trace_reason_user_config.def
app/doc/: architecture.rst  description.rst
app/src/common/: memfault_nrf_platform_battery_model.h  message_channel.c  message_channel.h  modules_common.h
app/src/modules/: intentions.md
app/src/modules/app/: CMakeLists.txt  Kconfig.app  app.c  app_object.cddl
app/src/modules/battery/: CMakeLists.txt  Kconfig.battery  bat_object.cddl  battery.c  lp803448_model.h
app/src/modules/bluetooth/: CMakeLists.txt  Kconfig.bluetooth  bluetooth.c
app/src/modules/button/: CMakeLists.txt  Kconfig.button  button.c  button_object.cddl
app/src/modules/environmental/: CMakeLists.txt  Kconfig.environmental  env_object.cddl  environmental.c
app/src/modules/error/: Kconfig.error  error.c
app/src/modules/fota/: CMakeLists.txt  Kconfig.fota  fota.c
app/src/modules/led/: CMakeLists.txt  Kconfig.led  led.c  led.h  led_effect.h  led_pwm.c  led_pwm.h
app/src/modules/led/led/: CMakeLists.txt
app/src/modules/location/: CMakeLists.txt  Kconfig.location  location.c
app/src/modules/memfault/: CMakeLists.txt  Kconfig.memfault  memfault.c
app/src/modules/network/: CMakeLists.txt  Kconfig.network  conn_info.cddl  network.c
app/src/modules/sampler/: sampler.c
app/src/modules/shell/: CMakeLists.txt  Kconfig.shell  shell.c
app/src/modules/transport/: Kconfig.transport  transport.c
app/src/modules/trigger/: Kconfig.trigger  trigger.c
app/sysbuild/mcuboot/: prj.conf
app/sysbuild/mcuboot/boards/: thingy91x_nrf9151.conf  thingy91x_nrf9151.overlay
asset_tracker_v2/: overlay-bsec.conf  sample.yaml
asset_tracker_v2/src/: main.c
docs/: ARCHITECTURE.md  README.md  about.rst  antennatuning.rst  architecture.rst  bom.rst  conf.py  custom.properties  gsg_guide.rst  index.rst  known_issues.rst  links.txt  location.md  make.bat  make.sh  pca20065_1_0_0.html  power_badge.json  power_measurements.csv  release_notes.rst  requirements.txt  tags.yml  test_csv.csv  transport.md  troubleshooting.rst
docs/_static/: hide-versions.css
docs/html/: .buildinfo  about.html  antennatuning.html  architecture.html  bom.html  genindex.html  gsg_guide.html  index.html  known_issues.html  led_indication.html  objects.inv  release_notes.html  search.html  searchindex.js  troubleshooting.html
drivers/: CMakeLists.txt  Kconfig
drivers/pwm/: CMakeLists.txt  Kconfig  (+3 more)
firmware/: CMakeLists.txt  prj.conf
firstlook/: CMakeLists.txt  Kconfig  prj.conf
firstlook/boards/: thingy91x_nrf9161_ns.conf
firstlook/scripts/: mqtt-client.py  requirements.txt
firstlook/src/modules/gas_sensor/: CMakeLists.txt  Kconfig  gas_sensor.c
firstlook/src/modules/led/: Kconfig  led.c
firstlook/src/modules/location/: CMakeLists.txt  Kconfig  location.c
firstlook/src/modules/movement/: CMakeLists.txt  Kconfig  movement.c
firstlook/src/modules/network/: network_lte.c
firstlook/src/modules/sampler/: Kconfig.sampler  sampler.c
firstlook/src/modules/transport/: CMakeLists.txt  Kconfig.transport  transport.c  transport.c.dummy
firstlook/src/modules/trigger/: trigger.c
firstlook/src/zbus/: message_channel.c  message_channel.h
firstlook/src/zcbor/: CMakeLists.txt  update_codec.sh
firstlook/src/zcbor/include/: cloudToDevice_decode.h  cloudToDevice_decode_types.h  deviceToCloud_encode.h  deviceToCloud_encode_types.h
firstlook/src/zcbor/src/: cloudToDevice_decode.c  deviceToCloud_encode.c
firstlook/tests/led_module/: CMakeLists.txt  prj.conf  testcase.yaml
firstlook/tests/led_module/boards/: native_posix.overlay
firstlook/tests/led_module/src/: led_module_test.c
lib/: CMakeLists.txt  Kconfig  README.md
scripts/: app_version.py  connectivity_bridge.patch  connectivity_bridge_extra_sample.yaml  debug_feature_nrf.patch  debug_feature_zephyr.patch  flash-app.py  nrf-connbr-testing.patch  nrf53_bl_update.patch  nrf91_etb_grabber.py  nrf91_flasher.py  nrf_wifi_hal_memory_leak_fix.patch  nsib_signature_check.py  pmr_nrf53.txt  pmr_nrf91.txt  read_flash.py  thingy91x_dfu.py  west-commands.yml
tests/lib/simple_config/: CMakeLists.txt  prj.conf  testcase.yaml
tests/lib/simple_config/src/: main.c
tests/module/button/: CMakeLists.txt  testcase.yaml
tests/module/button/src/: main.c
tests/module/network/: CMakeLists.txt  prj.conf  testcase.yaml
tests/module/network/src/: main.c
tests/module/transport/: CMakeLists.txt  prj.conf  testcase.yaml
tests/module/transport/src/: transport_module_test.c
tests/module/trigger/: CMakeLists.txt  prj.conf  testcase.yaml
tests/module/trigger/src/: main.c
zephyr/: module.yml
(+129 files in other folders)
